# jfc-wanikani_reviews_icon

./: .travis.yml  CMakeLists.txt  README.md
docs/: CMakeLists.txt
resources/: wanikani-32.xcf
src/: config.cpp  icon.cpp  main.cpp  notification.cpp  request.cpp  wanikani-32-init.cpp  wanikani-32-no_connection.cpp  wanikani-32-reviews_available.cpp  wanikani-32-reviews_complete.cpp
src/include/jfc/wanikani_reviews_icon/: config.h  enums.h  icon.h  icons.h  notification.h  request.h
test/: CMakeLists.txt  example_test.cpp
